force-app/main/default/objects/AdvancedFilingSystem__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>CONTRACT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>