force-app/main/default/objects/AdvancedFilingSystem__c/fields/FilingType__c.field-meta.xml
<CustomField>
    <fullName>FilingType__c</fullName>
    <label>FILING TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFR-JP24 Advanced Filing Rule</fullName>
            </value>
            <value>
                <fullName>AMS-America Advance Manifest System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>