force-app/main/default/objects/AdvancedFilingSystem__c/fields/HelpdeskExpert__c.field-meta.xml
<CustomField>
    <fullName>HelpdeskExpert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HELPDESK EXPERT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ServiceProvider__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ADVANCED FILING SYSTEM</relationshipLabel>
    <relationshipName>ADVANCED_FILING_SYSTEM</relationshipName>
    <type>Lookup</type>
</CustomField>