force-app/main/default/objects/AdvancedFilingSystem__c/fields/NVOCCCode__c.field-meta.xml
<CustomField>
    <fullName>NVOCCCode__c</fullName>
    <label>NVOCC CODE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>