force-app/main/default/objects/AdvancedFilingSystem__c/fields/ReportID__c.field-meta.xml
<CustomField>
    <fullName>ReportID__c</fullName>
    <label>REPORT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>