force-app/main/default/objects/AdvancedFilingSystem__c/fields/ReportPassword__c.field-meta.xml
<CustomField>
    <fullName>ReportPassword__c</fullName>
    <label>REPORT PASSWORD</label>
    <length>40</length>
    <type>Text</type>
</CustomField>