force-app/main/default/objects/AdvancedFilingSystem__c/fields/ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE PROVIDER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ADVANCED FILING SYSTEM</relationshipLabel>
    <relationshipName>ADVANCED_FILING_SYSTEM</relationshipName>
    <type>Lookup</type>
</CustomField>