force-app/main/default/objects/AdvancedFilingSystem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceProvider__c</columns>
    <columns>URL__c</columns>
    <columns>HelpdeskExpert__c</columns>
    <columns>TechinicalSupportEmail__c</columns>
    <columns>NVOCCCode__c</columns>
    <columns>ReportID__c</columns>
    <columns>ReportPassword__c</columns>
    <columns>SystemID__c</columns>
    <columns>SystemPassword__c</columns>
    <columns>Contract__c</columns>
    <columns>FilingType__c</columns>
    <columns>PAYMENT_CONDITION__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>